--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
 
-<form method="post" action="#" th:action="@{/login/login}">
+<form method="post" action="#" >
     <div>
         <label for="usern">Username:</label>
         <input type="text" id="usern" name="usern" placeholder="Enter Username" required>
